--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-API_AIRTABLE_KEY: "keyisCUd82F9lIdF8",
-BASE_AIRTABLE_KEY: "appp7UhNGyoMF078V",
-API_FOURSQUARE_KEY: "fsq3pTaoDIjDkIRTTg1c4vzBlZmKAwJLAg602GEZUbOjUpE=",
-API_UNSPLASH_KEY: "3zZ_FTkRA2dLQ_3Hgn4PI5PDUaMg4wPJXQnAHw0cWBM",
+API_AIRTABLE_KEY=keyisCUd82F9lIdF8
+BASE_AIRTABLE_KEY=appp7UhNGyoMF078V
+NEXT_PUBLIC_API_FOURSQUARE_KEY=fsq3pTaoDIjDkIRTTg1c4vzBlZmKAwJLAg602GEZUbOjUpE=
+NEXT_PUBLIC_API_UNSPLASH_KEY=3zZ_FTkRA2dLQ_3Hgn4PI5PDUaMg4wPJXQnAHw0cWBM
